Company Org/src/objects/Concretian__c.object
<CustomObject>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concretian_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Concretian External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teamwork_User_Id__c</fullName>
        <label>Teamwork User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Concretian</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Concretian Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concretians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>